--- a/main.html
+++ b/main.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <input id="screen__number" type="number" placeholder="Screen number">
+    <button>Show the screen</button>
     <div id="ads__container">The adds will show in here if needed</div>
 </body>
 
